# TnPcal

./: .gitignore  README.md  pyproject.toml
src/tnpcal/: efficiency_calculator.py  fitter.py  test_utilities.py
src/tnpcal_data/tests/: efficiency_calculator_large.yaml  efficiency_calculator_simple.yaml  fitter_simple.yaml
tests/: test_efficiency_calculator.py  test_fitter.py
