[project]
name        = 'TnPcal'
version     = '0.0.1'
dependencies= ['zfit', 'pandas', 'rx_scripts']

[project.optional-dependencies]
dev  = ['pytest']

[tools.setuptools.packages.find]
where= ['src']

[tool.setuptools.package-data]
tnpcal_data=['tests/*.yaml']

[project.scripts]
[tool.setuptools]
